<resources>
    <string name="app_name">CanteenMS</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="navigation_register">Don\'t Have an account ? Sign Up here</string>
    <string name="navigation_login">Already have an account ? Log in here</string>
    <string name="image">Image</string>
    <string name="tea">Tea</string>
    <string name="biryani">Biryani</string>
    <string name="burger">Burger</string>
    <string name="samosa">Samosa</string>
    <string name="french_fries">French Fries</string>
    <string name="salad">Salad</string>
    <string name="omelette">Omelette</string>
    <string name="cold_drink">Cold Drink</string>
    <string name="_12">12</string>
    <string name="rs_12">Rs 12</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="enter_location">Enter Location</string>
    <string name="location_hint">e.g: male faculty room, first floor</string>
    <string name="order">Order</string>
    <string name="_1">1</string>


    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <string name="rateconcatenate">Rs : </string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="my_order">My Order</string>
    <string name="orders">Orders</string>
    <string name="complete">Complete</string>
    <string name="accept">Accepted</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="pending">Pending</string>
    <string name="empty"> </string>
    <string name="order_completed">Order Completed</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="total_orders">Total Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter message</string>
    <string name="chat_room">Chat Room</string>
    <string name="chat">Chat</string>
    <string name="not_in_stock">Not in stock</string>

</resources>
