<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="none"
        >
        <item
            android:id="@+id/menu_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"
            />
        <item
            android:id="@+id/menu_chat"
            android:title="@string/chat"
            android:icon="@drawable/ic_chat"
            />
        <item
            android:id="@+id/menu_my_order"
            android:title="@string/my_order"
            android:icon="@drawable/ic_orders"
            />
    </group>

    <group
        android:id="@+id/menu_group_2"
        android:checkableBehavior="none"
        >

        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_signout"
            />
    </group>

</menu>