<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DishDisplay"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/display_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_samosa"
        android:contentDescription="@string/image"
        />

    <TextView
        android:id="@+id/display_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/display_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/samosa"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/display_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/display_dish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/rs_12"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/display_text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/display_prize"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/select_quantity"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/display_quantity_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/display_text_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:autofillHints="1"
        android:hint="@string/_1"
        android:padding="10dp"
        android:paddingEnd="40dp"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_quantity"
        android:drawablePadding="30dp"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/display_text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/display_quantity_edit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/enter_location"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/display_edittext_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_text_location"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/location_hint"
        android:hint="@string/location_hint"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_location"
        android:inputType="text"
        />

    <Button
        android:id="@+id/display_btn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="30dp"
        android:text="@string/order"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        />

</androidx.constraintlayout.widget.ConstraintLayout>