<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/list_item_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_samosa"
        android:contentDescription="@string/image"
        />

    <TextView
        android:id="@+id/list_item_dish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_item_image"
        android:text="@string/full_name"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:id="@+id/list_item_dish_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/list_item_dish_name"
        app:layout_constraintStart_toEndOf="@id/list_item_image"
        android:text="@string/full_name"
        android:textStyle="normal"
        android:layout_marginTop="2dp"
        android:layout_marginStart="5dp"
        />

    <Button
        android:id="@+id/list_item_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/list_item_complete_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/accept"
        />

    <Button
        android:id="@+id/list_item_complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/complete"
        />


</androidx.constraintlayout.widget.ConstraintLayout>