<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Register"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="150dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image"
        android:src="@drawable/canteen_Logo"
        android:layout_marginTop="30dp"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/register_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_logo"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:cardCornerRadius="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:paddingTop="2.5dp"
            android:paddingBottom="10dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/register_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_profile_80_80"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"
                />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/full_name"
                android:autofillHints="@string/full_name"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_full_name_icon"
                android:drawablePadding="10dp"
                />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="@string/email"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_email_icon"
                android:drawablePadding="10dp"
                />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_password_icon"
                android:drawablePadding="10dp"
                />
            <EditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:autofillHints="@string/confirm_password"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_password_icon"
                android:drawablePadding="10dp"
                />

            <Button
                android:id="@+id/register_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                />

            <TextView
                android:id="@+id/register_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_login"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/edit_text_hint_color"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>