<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login"
    android:background="@color/white"
    >



    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/image"
        android:src="@drawable/canteen_logo"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:cardCornerRadius="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            >

            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminateTint="@color/colorPrimaryDark"
                />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:autofillHints="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_email_icon"
                android:drawablePadding="10dp"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_password_icon"
                android:drawablePadding="10dp"
                />

            <Button
                android:id="@+id/login_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:layout_marginTop="30dp"
                />

            <TextView
                android:id="@+id/login_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_register"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/edit_text_hint_color"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>