<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/profile_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/my_profile"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />
    <View
        android:id="@+id/profile_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/profile_menu"
        android:background="@color/edit_text_hint_color"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_profile_80_80"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textSize="18sp"
        />

    <LinearLayout
        android:id="@+id/profile_key_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_value_linear_layout"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_orders"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_completed"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_cancelled"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_value_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_key_linear_layout"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/profile_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_orders"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/profile_complete_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_completed"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/profile_cancel_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_cancelled"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>